--- a/bycycle-web-main/info.html
+++ b/bycycle-web-main/info.html
@@ -12,7 +12,7 @@
         <p class="textlogo">ByCycle</p>
       
         <ul class="navbar">
-          <li class="navitem"><a href="home.html">Home</a></li>
+          <li class="navitem"><a href="index.html">Home</a></li>
           <li class="navitem"><a href="info.html">Informações</a></li>
           <li class="navitem"><a href="download.html">Download</a></li>
         </ul>
